--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <html>
-<head><title>KMS (Knowledge Management System) </title> <link rel="icon" href="logo.png">
+<head><title>PIP (Public Information Portal) </title> <link rel="icon" href="icon.png">
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body> 
-<div class="top"> <a class="two" href="https://bornakhan.github.io/Home-Page/">Knowledge Management System </a></div>
-<div class="bot"> <u>For more info call <a href="tel:333"> ✆333</a></u> </div>
+
+
+<body>
+<div class="top"> <a class="two" href="https://bornakhan.github.io/Home-Page/">Public Information Portal </a> </div>
+<div class="bot"> <u>For more info call <a class="one" href="tel:333"> ✆333</a></u> </div>
 <pre>
 
 
